--- a/src/html/layout/_main.html
+++ b/src/html/layout/_main.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
 
-    <title>Html Starter</title>
+    <title>Scss Example</title>
     <meta name="description" content="">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="/css/font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
