--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,9 +3,9 @@
 @import 'lib/variables';
 @import 'lib/mixins';
 
-@import 'shared/helper.scss';
-@import 'shared/main-header.scss';
-@import 'shared/main-footer.scss';
-@import 'blocks/about.scss';
+@import 'shared/helper';
+@import 'shared/main-header';
+@import 'shared/main-footer';
+@import 'blocks/about';
 
 
