--- a/src/scss/shared/_main-footer.scss
+++ b/src/scss/shared/_main-footer.scss
@@ -1,76 +1,79 @@
-.main-footer{
-  padding-bottom: 40px;
+.main-footer {
+  background: $almost-black;
+  border-bottom: 5px solid $gray-darker;
+  border-top: 1px solid $gray-darker;
   font-size: 12px;
-  background: $black + 50;
+  padding-bottom: 40px;
   position: relative;
-  border-top: 1px solid $black + 80;
-  border-bottom: 5px solid $black + 80;
 
-  .folow-me{
-    text-align: center;
-    background: $black + 80;
-    padding: 5px;
+  .folow-me {
+    background: $gray-darker;
     margin: 0 auto;
     margin-bottom: 20px;
+    padding: 5px;
+    text-align: center;
     width: 150px;
   }
-  .back-to-top{
-    position: absolute;
+
+  .back-to-top {
+    background: $gray-darker;
     bottom: -5px;
-    left: 50%;
-    display: block;
-    width: 30px;
-    height: 30px;
-    margin-left: -15px;
-    text-decoration: none;
-    outline: none;
-    line-height: 30px;
-    text-align: center;
     color: $color-text;
-    background: $black + 80;
-    &:hover, &:focus{
+    display: block;
+    height: 30px;
+    left: 50%;
+    line-height: 30px;
+    margin-left: -15px;
+    outline: none;
+    position: absolute;
+    text-align: center;
+    text-decoration: none;
+
+    width: 30px;
+
+    &:hover,
+    &:focus {
       color: $white;
     }
   }
 
-  p{
+  p {
     position: relative;
   }
 
-  &:before{
-    content: "";
-    position: absolute;
-    width: 50%;
-    right: 0;
+  &::before {
+    background: rgba($black, .05);
     bottom: 0;
+    content: '';
     height: 100%;
-    background: rgba($black, 0.05)
+    position: absolute;
+    right: 0;
+    width: 50%;
   }
 }
 
-
-
-
-.social-links{
-  padding: 0;
+.social-links {
   margin-bottom: 10px;
+  padding: 0;
 
-  a{
-    position: relative;
+  a {
+    @include transition(background .8s ease 0s);
+    background: $gray-darkest;
     color: $white;
     display: block;
-    @include transition(background 0.8s ease 0s);
-    width: 30px;
-    text-decoration: none;
-    height: 30px;
     font-size: 16px;
+    height: 30px;
     line-height: 30px;
+    position: relative;
     text-align: center;
-    background: $black + 40;
-    i{
+    text-decoration: none;
+    width: 30px;
+
+    i {
       position: relative;
     }
-    &:hover{
+
+    &:hover {
       background: $white;
       color: $black;
     }
