use Flexbox for Category page

--- a/src/scss/lib/_mixins.scss
+++ b/src/scss/lib/_mixins.scss
@@ -8,6 +8,25 @@
   -o-transition: $transition;
   -ms-transition: $transition;
 }
+@mixin transition-transform($transition...) {
+  -webkit-transition: -webkit-transform $transition;
+  -moz-transition: -moz-transform $transition;
+  -o-transition: -o-transform $transition;
+  transition: transform $transition;
+}
+
+@mixin transform-origin($origin) {
+  -webkit-transform-origin: $origin;
+  -moz-transform-origin: $origin;
+  -ms-transform-origin: $origin; // IE9 only
+  transform-origin: $origin;
+}
+
+@mixin transition-delay($transition-delay) {
+  -webkit-transition-delay: $transition-delay;
+  transition-delay: $transition-delay;
+}
+
 
 @mixin radius($radius: 0) {
   -webkit-border-radius: $radius;
