--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import 'shared/helper';
 @import 'shared/main-header';
 @import 'shared/main-footer';
+@import 'shared/masonry';
 @import 'blocks/about';
 
 
