--- a/public/css/main.css
+++ b/public/css/main.css
@@ -720,6 +720,112 @@ blockquote {
   color: #000;
 }
 
+@media (min-width: 600px) {
+  .flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    max-height: 1340px;
+    max-width: 960px;
+    overflow: hidden;
+  }
+  .flex-container .flex-box {
+    width: 30%;
+  }
+}
+.flex-box {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  margin-bottom: 30px;
+}
+.flex-box img {
+  max-width: 100%;
+  height: auto;
+}
+.flex-box figcaption {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.flex-box figcaption::before, .flex-box figcaption::after {
+  pointer-events: none;
+  position: absolute;
+  content: '';
+  opacity: 0;
+}
+.flex-box figcaption::before {
+  -webkit-transform-origin: 0 0;
+  -moz-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  transform-origin: 0 0;
+  top: 35px;
+  right: 20px;
+  bottom: 35px;
+  left: 20px;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  -webkit-transform: scale(0, 1);
+  transform: scale(0, 1);
+}
+.flex-box figcaption::after {
+  -webkit-transform-origin: 100% 0;
+  -moz-transform-origin: 100% 0;
+  -ms-transform-origin: 100% 0;
+  transform-origin: 100% 0;
+  top: 20px;
+  right: 35px;
+  bottom: 20px;
+  left: 35px;
+  border-right: 1px solid #fff;
+  border-left: 1px solid #fff;
+  -webkit-transform: scale(1, 0);
+  transform: scale(1, 0);
+}
+.flex-box figcaption .link-to {
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: -webkit-transform 0.35s;
+  -moz-transition: -moz-transform 0.35s;
+  -o-transition: -o-transform 0.35s;
+  transition: transform 0.35s;
+  font-size: 24px;
+  font-family: Trueno;
+  font-weight: 700;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  position: absolute;
+  top: 45%;
+  left: 0;
+  right: 0;
+  padding: 0 40px;
+}
+.flex-box figcaption::before,
+.flex-box figcaption::after,
+.flex-box figcaption .link-to {
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+}
+.flex-box:hover figcaption::before, .flex-box:hover figcaption::after, .flex-box:hover figcaption .link-to {
+  -webkit-transition-delay: 0.15s;
+  transition-delay: 0.15s;
+  transform: scale(1);
+  -ms-transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -o-transform: scale(1);
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+.flex-box:hover img {
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+}
+
 .my-profile {
   position: relative;
 }
