--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,18 +1,295 @@
-body {
-  background: #fff;
-  color: #7d7d7d;
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-  -webkit-font-smoothing: antialiased;
-  line-height: 2;
+.main-header {
+  height: 600px;
   position: relative;
 }
-body .wrapper {
-  opacity: 0;
-  filter: alpha(opacity=0);
+.main-header .header-content-fixed {
+  background: url("../images/main-header.jpg") no-repeat center;
+  background-attachment: fixed;
+  background-size: cover;
+  height: 600px;
+  position: fixed;
+  text-align: center;
+  width: 100%;
+  z-index: 0;
+}
+.main-header .header-content-fixed::before {
+  transition: top 1s ease 0.3s, background 1s ease 0s;
+  -webkit-transition: top 1s ease 0.3s, background 1s ease 0s;
+  -moz-transition: top 1s ease 0.3s, background 1s ease 0s;
+  -o-transition: top 1s ease 0.3s, background 1s ease 0s;
+  -ms-transition: top 1s ease 0.3s, background 1s ease 0s;
+  background: rgba(255, 255, 255, 0.4);
+  content: '';
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 50%;
+}
+.main-header .header-content-fixed::after {
+  transition: bottom 1s ease 0.3s, background 1s ease 0s;
+  -webkit-transition: bottom 1s ease 0.3s, background 1s ease 0s;
+  -moz-transition: bottom 1s ease 0.3s, background 1s ease 0s;
+  -o-transition: bottom 1s ease 0.3s, background 1s ease 0s;
+  -ms-transition: bottom 1s ease 0.3s, background 1s ease 0s;
+  background: rgba(255, 255, 255, 0.3);
+  bottom: 0;
+  content: '';
+  height: 100%;
+  position: absolute;
+  right: 0;
+  width: 50%;
+}
+@media (max-width: 1024px) {
+  .main-header .header-content-fixed {
+    position: relative;
+  }
+}
+.main-header:hover .header-content-fixed::before {
+  background: rgba(255, 255, 255, 0.9);
+}
+.main-header:hover .header-content-fixed::after {
+  background: rgba(255, 255, 255, 0.8);
+}
+.main-header .whoim {
+  position: absolute;
+  top: 100px;
+  width: 100%;
+  z-index: 3;
+}
+.main-header .name {
+  font-size: 60px;
+  font-weight: 700;
+  letter-spacing: 10px;
+  margin-bottom: 20px;
   position: relative;
+  z-index: 3;
+}
+@media (max-width: 1030px) {
+  .main-header .name {
+    font-size: 3em;
+  }
+}
+.main-header .job {
+  border-bottom: 1px solid #000;
+  display: inline-block;
+  letter-spacing: 4px;
+  padding: 10px;
+  position: relative;
+  z-index: 3;
+}
+
+.menu-area {
+  transition: background 0.8s ease 0s;
+  -webkit-transition: background 0.8s ease 0s;
+  -moz-transition: background 0.8s ease 0s;
+  -o-transition: background 0.8s ease 0s;
+  -ms-transition: background 0.8s ease 0s;
+  background: rgba(255, 255, 255, 0.3);
+  border-bottom: 1px solid #ebebeb;
+  bottom: 0;
+  left: 0;
+  padding: 10px 0;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  z-index: 100;
+}
+.menu-area .toogle-bars {
+  display: none;
+}
+.menu-area .toogle-bars a {
+  color: #000;
+  text-decoration: none;
+}
+.menu-area .toogle-bars a .ic-open {
+  display: none;
   visibility: hidden;
-  z-index: 2;
+}
+.menu-area .toogle-bars a .ic-close {
+  display: inline;
+  visibility: visible;
+}
+.menu-area .toogle-bars a.collapsed .ic-open {
+  display: inline;
+  visibility: visible;
+}
+.menu-area .toogle-bars a.collapsed .ic-close {
+  display: none;
+  visibility: hidden;
+}
+.menu-area .main-nav {
+  background: transparent;
+  margin: 0;
+  visibility: visible;
+}
+.menu-area .main-nav > li {
+  display: inline;
+}
+.menu-area .main-nav > li > a {
+  transition: all 0.3s ease 0s;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  -ms-transition: all 0.3s ease 0s;
+  color: #323232;
+  font-size: 12px;
+  font-weight: 700;
+  outline: none;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.menu-area .main-nav > li > a:hover {
+  color: #000;
+  outline: none;
+}
+.menu-area .main-nav > li + li::before {
+  color: #323232;
+}
+.menu-area .main-nav > li.active > a {
+  color: #000;
+}
+.menu-area .main-nav.nav > li > a {
+  display: inline-block;
+  padding: 0;
+}
+.menu-area .main-nav.nav > li > a:hover, .menu-area .main-nav.nav > li > a:focus {
+  background: transparent;
+}
+.menu-area .main-nav.no-space > li + li::before {
+  content: '';
+}
+.menu-area.nav-white-bg {
+  border-bottom: 1px solid #ebebeb;
+  background: #fff;
+}
+.menu-area.nav-white-bg .main-nav > li > a {
+  color: #7d7d7d;
+}
+.menu-area.nav-white-bg .main-nav > li > a:hover {
+  color: #000;
+}
+.menu-area.nav-white-bg .main-nav > li.active > a {
+  color: #000;
+}
+.menu-area.nav-white-bg .main-nav > li + li::before {
+  color: #ebebeb;
+}
+.menu-area.nav-fixed {
+  background: #fff;
+  border-bottom: 1px solid #ebebeb;
+  bottom: inherit;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+}
+@media (min-width: 1030px) {
+  .menu-area .menu-collapse.collapse {
+    display: block;
+    height: auto;
+  }
+}
+@media (max-width: 1030px) {
+  .menu-area {
+    border-bottom: 1px solid #ebebeb;
+    background: #fff;
+  }
+  .menu-area .main-nav > li > a {
+    color: #7d7d7d;
+  }
+  .menu-area .main-nav > li > a:hover {
+    color: #000;
+  }
+  .menu-area .main-nav > li.active > a {
+    color: #000;
+  }
+  .menu-area .main-nav > li + li::before {
+    color: #ebebeb;
+  }
+  .menu-area .toogle-bars {
+    display: block;
+  }
+  .menu-area .menu-collapsec.collapse.inc {
+    border-top: 1px solid #ebebeb;
+    display: block;
+    margin-top: 10px;
+  }
+}
+
+.main-footer {
+  background: #323232;
+  border-bottom: 5px solid #505050;
+  border-top: 1px solid #505050;
+  font-size: 12px;
+  padding-bottom: 40px;
+  position: relative;
+}
+.main-footer .folow-me {
+  background: #505050;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  padding: 5px;
+  text-align: center;
+  width: 150px;
+}
+.main-footer .back-to-top {
+  background: #505050;
+  bottom: -5px;
+  color: #7d7d7d;
+  display: block;
+  height: 30px;
+  left: 50%;
+  line-height: 30px;
+  margin-left: -15px;
+  outline: none;
+  position: absolute;
+  text-align: center;
+  text-decoration: none;
+  width: 30px;
+}
+.main-footer .back-to-top:hover, .main-footer .back-to-top:focus {
+  color: #fff;
+}
+.main-footer p {
+  position: relative;
+}
+.main-footer::before {
+  background: rgba(0, 0, 0, 0.05);
+  bottom: 0;
+  content: '';
+  height: 100%;
+  position: absolute;
+  right: 0;
+  width: 50%;
+}
+
+.social-links {
+  margin-bottom: 10px;
+  padding: 0;
+}
+.social-links a {
+  transition: background 0.8s ease 0s;
+  -webkit-transition: background 0.8s ease 0s;
+  -moz-transition: background 0.8s ease 0s;
+  -o-transition: background 0.8s ease 0s;
+  -ms-transition: background 0.8s ease 0s;
+  background: #282828;
+  color: #fff;
+  display: block;
+  font-size: 16px;
+  height: 30px;
+  line-height: 30px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  width: 30px;
+}
+.social-links a i {
+  position: relative;
+}
+.social-links a:hover {
+  background: #fff;
+  color: #000;
 }
 
 .bg1 {
@@ -426,297 +703,46 @@ blockquote {
   padding-top: 0;
 }
 
-.main-header {
-  height: 600px;
+.box-btn-more {
   position: relative;
-}
-.main-header .header-content-fixed {
-  background: url("../images/main-header.jpg") no-repeat center;
-  background-attachment: fixed;
-  background-size: cover;
-  height: 600px;
-  position: fixed;
+  padding: 20px 0;
   text-align: center;
-  width: 100%;
-  z-index: 0;
 }
-.main-header .header-content-fixed::before {
-  transition: top 1s ease 0.3s, background 1s ease 0s;
-  -webkit-transition: top 1s ease 0.3s, background 1s ease 0s;
-  -moz-transition: top 1s ease 0.3s, background 1s ease 0s;
-  -o-transition: top 1s ease 0.3s, background 1s ease 0s;
-  -ms-transition: top 1s ease 0.3s, background 1s ease 0s;
-  background: rgba(255, 255, 255, 0.4);
-  content: '';
-  height: 100%;
+.box-btn-more .btn {
+  position: relative;
+  background: #fff;
+  text-decoration: none;
+  border-left: 1px solid #f5f5f5;
+  border-right: 1px solid #f5f5f5;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+}
+.box-btn-more .btn:hover {
+  border: 1px solid #f5f5f5;
+}
+.box-btn-more::before {
+  width: 100%;
+  content: "";
+  position: absolute;
+  top: 50%;
+  border-top: 1px solid #f5f5f5;
   left: 0;
-  position: absolute;
-  top: 0;
-  width: 50%;
-}
-.main-header .header-content-fixed::after {
-  transition: bottom 1s ease 0.3s, background 1s ease 0s;
-  -webkit-transition: bottom 1s ease 0.3s, background 1s ease 0s;
-  -moz-transition: bottom 1s ease 0.3s, background 1s ease 0s;
-  -o-transition: bottom 1s ease 0.3s, background 1s ease 0s;
-  -ms-transition: bottom 1s ease 0.3s, background 1s ease 0s;
-  background: rgba(255, 255, 255, 0.3);
-  bottom: 0;
-  content: '';
-  height: 100%;
-  position: absolute;
-  right: 0;
-  width: 50%;
-}
-@media (max-width: 1024px) {
-  .main-header .header-content-fixed {
-    position: relative;
-  }
-}
-.main-header:hover .header-content-fixed::before {
-  background: rgba(255, 255, 255, 0.9);
-}
-.main-header:hover .header-content-fixed::after {
-  background: rgba(255, 255, 255, 0.8);
-}
-.main-header .whoim {
-  position: absolute;
-  top: 100px;
-  width: 100%;
-  z-index: 3;
-}
-.main-header .name {
-  font-size: 60px;
-  font-weight: 700;
-  letter-spacing: 10px;
-  margin-bottom: 20px;
-  position: relative;
-  z-index: 3;
-}
-@media (max-width: 1030px) {
-  .main-header .name {
-    font-size: 3em;
-  }
-}
-.main-header .job {
-  border-bottom: 1px solid #000;
-  display: inline-block;
-  letter-spacing: 4px;
-  padding: 10px;
-  position: relative;
-  z-index: 3;
 }
 
-.menu-area {
-  transition: background 0.8s ease 0s;
-  -webkit-transition: background 0.8s ease 0s;
-  -moz-transition: background 0.8s ease 0s;
-  -o-transition: background 0.8s ease 0s;
-  -ms-transition: background 0.8s ease 0s;
-  background: rgba(255, 255, 255, 0.3);
-  border-bottom: 1px solid #ebebeb;
-  bottom: 0;
-  left: 0;
-  padding: 10px 0;
-  position: absolute;
-  text-align: center;
-  width: 100%;
-  z-index: 100;
-}
-.menu-area .toogle-bars {
-  display: none;
-}
-.menu-area .toogle-bars a {
-  color: #000;
-  text-decoration: none;
-}
-.menu-area .toogle-bars a .ic-open {
-  display: none;
-  visibility: hidden;
-}
-.menu-area .toogle-bars a .ic-close {
-  display: inline;
-  visibility: visible;
-}
-.menu-area .toogle-bars a.collapsed .ic-open {
-  display: inline;
-  visibility: visible;
-}
-.menu-area .toogle-bars a.collapsed .ic-close {
-  display: none;
-  visibility: hidden;
-}
-.menu-area .main-nav {
-  background: transparent;
-  margin: 0;
-  visibility: visible;
-}
-.menu-area .main-nav > li {
-  display: inline;
-}
-.menu-area .main-nav > li > a {
-  transition: all 0.3s ease 0s;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  -ms-transition: all 0.3s ease 0s;
-  color: #323232;
-  font-size: 12px;
+.btn-link {
+  transition: all 0.8s ease 0s;
+  -webkit-transition: all 0.8s ease 0s;
+  -moz-transition: all 0.8s ease 0s;
+  -o-transition: all 0.8s ease 0s;
+  -ms-transition: all 0.8s ease 0s;
   font-weight: 700;
-  outline: none;
-  text-decoration: none;
   text-transform: uppercase;
-}
-.menu-area .main-nav > li > a:hover {
-  color: #000;
-  outline: none;
-}
-.menu-area .main-nav > li + li::before {
-  color: #323232;
-}
-.menu-area .main-nav > li.active > a {
-  color: #000;
-}
-.menu-area .main-nav.nav > li > a {
-  display: inline-block;
-  padding: 0;
-}
-.menu-area .main-nav.nav > li > a:hover, .menu-area .main-nav.nav > li > a:focus {
-  background: transparent;
-}
-.menu-area .main-nav.no-space > li + li::before {
-  content: '';
-}
-.menu-area.nav-white-bg {
-  border-bottom: 1px solid #ebebeb;
-  background: #fff;
-}
-.menu-area.nav-white-bg .main-nav > li > a {
-  color: #7d7d7d;
-}
-.menu-area.nav-white-bg .main-nav > li > a:hover {
-  color: #000;
-}
-.menu-area.nav-white-bg .main-nav > li.active > a {
-  color: #000;
-}
-.menu-area.nav-white-bg .main-nav > li + li::before {
-  color: #ebebeb;
-}
-.menu-area.nav-fixed {
-  background: #fff;
-  border-bottom: 1px solid #ebebeb;
-  bottom: inherit;
-  position: fixed;
-  top: 0;
-  z-index: 100;
-}
-@media (min-width: 1030px) {
-  .menu-area .menu-collapse.collapse {
-    display: block;
-    height: auto;
-  }
-}
-@media (max-width: 1030px) {
-  .menu-area {
-    border-bottom: 1px solid #ebebeb;
-    background: #fff;
-  }
-  .menu-area .main-nav > li > a {
-    color: #7d7d7d;
-  }
-  .menu-area .main-nav > li > a:hover {
-    color: #000;
-  }
-  .menu-area .main-nav > li.active > a {
-    color: #000;
-  }
-  .menu-area .main-nav > li + li::before {
-    color: #ebebeb;
-  }
-  .menu-area .toogle-bars {
-    display: block;
-  }
-  .menu-area .menu-collapsec.collapse.inc {
-    border-top: 1px solid #ebebeb;
-    display: block;
-    margin-top: 10px;
-  }
-}
-
-.main-footer {
-  background: #323232;
-  border-bottom: 5px solid #505050;
-  border-top: 1px solid #505050;
   font-size: 12px;
-  padding-bottom: 40px;
-  position: relative;
-}
-.main-footer .folow-me {
-  background: #505050;
-  margin: 0 auto;
-  margin-bottom: 20px;
-  padding: 5px;
-  text-align: center;
-  width: 150px;
-}
-.main-footer .back-to-top {
-  background: #505050;
-  bottom: -5px;
-  color: #7d7d7d;
-  display: block;
-  height: 30px;
-  left: 50%;
-  line-height: 30px;
-  margin-left: -15px;
-  outline: none;
-  position: absolute;
-  text-align: center;
-  text-decoration: none;
-  width: 30px;
-}
-.main-footer .back-to-top:hover, .main-footer .back-to-top:focus {
-  color: #fff;
-}
-.main-footer p {
-  position: relative;
-}
-.main-footer::before {
-  background: rgba(0, 0, 0, 0.05);
-  bottom: 0;
-  content: '';
-  height: 100%;
-  position: absolute;
-  right: 0;
-  width: 50%;
-}
-
-.social-links {
-  margin-bottom: 10px;
-  padding: 0;
-}
-.social-links a {
-  transition: background 0.8s ease 0s;
-  -webkit-transition: background 0.8s ease 0s;
-  -moz-transition: background 0.8s ease 0s;
-  -o-transition: background 0.8s ease 0s;
-  -ms-transition: background 0.8s ease 0s;
-  background: #282828;
-  color: #fff;
-  display: block;
-  font-size: 16px;
-  height: 30px;
-  line-height: 30px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  width: 30px;
-}
-.social-links a i {
-  position: relative;
-}
-.social-links a:hover {
-  background: #fff;
+  min-width: 151px;
+  border-width: 3px;
+  letter-spacing: 1px;
+  padding: 13px;
+  background-color: transparent;
   color: #000;
 }
 
@@ -824,6 +850,23 @@ blockquote {
 .flex-box:hover img {
   opacity: 0.7;
   filter: alpha(opacity=70);
+}
+
+body {
+  background: #fff;
+  color: #7d7d7d;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  -webkit-font-smoothing: antialiased;
+  line-height: 2;
+  position: relative;
+}
+body .wrapper {
+  opacity: 0;
+  filter: alpha(opacity=0);
+  position: relative;
+  visibility: hidden;
+  z-index: 2;
 }
 
 .my-profile {
